Fix scope
